@@ -9,12 +9,12 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static java.util.Objects.nonNull;
 import static no.nav.dolly.domain.resultset.SystemTyper.SYKEMELDING;
+import static no.nav.dolly.mapper.AbstractRsStatusMiljoeIdentForhold.decodeMsg;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class BestillingSykemeldingStatusMapper {
@@ -37,10 +37,10 @@ public class BestillingSykemeldingStatusMapper {
                 : singletonList(RsStatusRapport.builder().id(SYKEMELDING).navn(SYKEMELDING.getBeskrivelse())
                 .statuser(statusMap.entrySet().stream()
                         .map(entry -> RsStatusRapport.Status.builder()
-                                .melding(entry.getKey().replaceAll("=", ":"))
+                                .melding(decodeMsg(entry.getKey()))
                                 .identer(entry.getValue())
                                 .build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build());
     }
 }
